--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "description": "",
   "dependencies": {
     "axios": "^1.12.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
     "firebase-admin": "^13.5.0",
+    "helmet": "^8.1.0",
     "mongoose": "^8.18.1",
+    "morgan": "^1.10.1",
     "nodemon": "^3.1.10",
     "uuid": "^13.0.0"
   }
