--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
+    "@payos/node": "^2.0.3",
     "@pinecone-database/pinecone": "^6.1.2",
     "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
@@ -28,7 +29,6 @@
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "node-fetch": "^3.3.2",
-
     "uuid": "^13.0.0"
   },
   "devDependencies": {
