feat: Expand explore categories from 8 to 67+ diverse categories
- Add 60+ new categories across 10 main groups (accommodation, dining, attractions, nature, entertainment, shopping, services, transportation, education, business)
- Update Place and PartnerPlace models with comprehensive category enums
- Enhance Google Maps integration with complete category mapping
- Add data seeding script for diverse places
- Create comprehensive demo scripts for testing
- Add documentation guide for new categories
- Maintain backward compatibility with existing categories

Categories added:
- Accommodation: hotel, resort, homestay, hostel, villa, apartment
- Dining: restaurant, cafe, bar, pub, bistro, food court, street food
- Attractions: museum, temple, church, park, zoo, historical sites
- Nature: beach, mountain, waterfall, lake, river, island, cave, forest
- Entertainment: amusement park, casino, club, karaoke, cinema, theater
- Shopping: mall, market, store, supermarket, outlet, night market
- Services: spa, massage, salon, gym, yoga, hospital, clinic, bank
- Transportation: airport, bus station, train station, port, gas station
- Education: school, library, cultural center, art gallery, studio
- Business: office, company, factory, industrial zone, co-working space

This expansion enables comprehensive travel discovery across all user needs.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
-    "import-data": "node src/scripts/importData.js"
+    "import-data": "node src/scripts/importData.js",
+    "add-diverse-places": "node src/scripts/add-diverse-places.js"
   },
   "keywords": [],
   "author": "",
